--- a/src/layout.css
+++ b/src/layout.css
@@ -26,7 +26,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -46,6 +46,11 @@ code {
   padding: 30px;
   border-radius: 10px 0 0 0;
   overflow-y: scroll;
+}
+@media (max-width: 992px) {
+  .content {
+    margin-top: 62px;
+  }
 }
 
 .App {
